--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "email-sender",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "David Taing <adavidtaing@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@sendgrid/mail": "^7.4.6",
+    "dotenv": "^10.0.0"
+  }
 }
