--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "email-sender",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.ts",
   "scripts": {
-    "start": "node app.js"
+    "start": "npx ts-node src/app.ts"
   },
   "author": "David Taing <adavidtaing@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.4.6",
     "dotenv": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^16.6.2"
   }
 }
