--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.4.6",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "xlsx": "^0.17.1"
   },
   "devDependencies": {
     "@types/node": "^16.6.2"
