--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.4.6",
     "dotenv": "^10.0.0",
+    "mime-types": "^2.1.32",
     "xlsx": "^0.17.1"
   },
   "devDependencies": {
